fix: fix input spacings

--- a/src/shared/ui/input.module.css
+++ b/src/shared/ui/input.module.css
@@ -10,14 +10,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
   color: var(--c-gray-200);
-  margin: 0 16px;
+  margin-left: 16px;
 }
 
 .input {
   width: 100%;
   font-size: 14px;
+  padding: 0 14px;
   border: none;
 }
 .input:focus {
